Updating tmux to include tmux-resurrect

--- a/cookbooks/default/tmux/files/default/.tmux.conf
+++ b/cookbooks/default/tmux/files/default/.tmux.conf
@@ -3,6 +3,9 @@
 bind s split-window -v
 bind v split-window -h
 
+bind ^s split-window -v
+bind ^v split-window -h
+
 # move around panes with hjkl, as one would in vim after pressing ctrl-w
 bind h select-pane -L
 bind j select-pane -D
@@ -60,3 +63,5 @@ set -g base-index 1
 set -g history-limit 102400
 set -s escape-time 0
 set-option -g status-keys emacs
+
+run-shell ~/clone/path/resurrect.tmux
