--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -5,6 +5,7 @@ Vagrant.configure('2') do |config|
   config.vm.box = 'vm'
 
   # forward guest port to access your web application
+  #host is your mac, guest is your vm
   #config.vm.network :forwarded_port, host: 8080, guest: 8080
 
   config.ssh.forward_agent    = true
