--- a/cookbooks/default/tmux/files/default/.tmux.conf
+++ b/cookbooks/default/tmux/files/default/.tmux.conf
@@ -47,8 +47,10 @@ set-option -g status-right-length 100
 set-option -g status-bg colour237
 set-option -g status-right '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #S #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %y %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
 
-set-option -g pane-active-border-fg colour240
 set-option -g pane-border-fg colour238
+set-option -g pane-border-bg colour236
+set-option -g pane-active-border-bg colour236
+set-option -g pane-active-border-fg colour51
 
 set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
 set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
