--- a/cookbooks/default/tmux/files/default/.tmux.conf
+++ b/cookbooks/default/tmux/files/default/.tmux.conf
@@ -67,3 +67,4 @@ set -s escape-time 0
 set-option -g status-keys emacs
 
 run-shell ~/clone/path/resurrect.tmux
+set -g @plugin 'tmux-plugins/tmux-resurrect'
