Adding custom cookbooks for ruby

--- a/cookbooks/default/tmux/files/default/.tmux.conf
+++ b/cookbooks/default/tmux/files/default/.tmux.conf
@@ -1,10 +1,12 @@
-# split windows like vim
+# split windows like vim using current directory
 # vim's definition of a horizontal/vertical split is reversed from tmux's
-bind s split-window -v
-bind v split-window -h
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
-bind ^s split-window -v
-bind ^v split-window -h
+bind ^s split-window -v -c "#{pane_current_path}"
+bind ^v split-window -h -c "#{pane_current_path}"
+bind ^c new-window -c "#{pane_current_path}"
 
 # move around panes with hjkl, as one would in vim after pressing ctrl-w
 bind h select-pane -L
@@ -39,6 +41,8 @@ bind ^a last-window # toggle last window like screen
 
 # renumber windows when a window is closed
 set-option -g renumber-windows on
+
+set-option -g allow-rename off
 
 bind K confirm kill-server
 bind X confirm kill-window
